# lansongdemo

./: build.gradle  gradle.properties  local.properties  settings.gradle
A0LiveMachine/: CMakeLists.txt  build.gradle
A0LiveMachine/src/main/: AndroidManifest.xml
A0LiveMachine/src/main/cpp/: TestRender.cpp  TestRender.h
A0LiveMachine/src/main/java/com/lansong/testNative/: TestNativeRender2.java  TestNativeRenderAPI2.java  TestNativeRenderActivity.java
A0LiveMachine/src/main/res/drawable/: black_alpha_radius_bg.xml  border.xml  ic_layer_check.xml  selector_layer_item_see.xml  skb_layer_video_volume.xml
A0LiveMachine/src/main/res/layout/: native_render_layout.xml  register_mode_address_layout.xml
A0LiveMachine/src/main/res/values/: attrs.xml  colors.xml  dimens.xml  styles.xml  text_style.xml
LanSongSDK/: build.gradle  proguard-rules.pro
LanSongSDK/src/main/assets/: gm10824Model.model  gm10905.model  gm1A0908.model  gm1B0913.model  gm20905.model  gm2630Model.model  gm4092.model  gmModel0601.model  gmModel0628.model
LanSongSDK/src/main/cpp/sdk_header/: ZSCppUtils.h  ZSGreenMatting.h  ZSLayer.h  ZSRender.h
LanSongSDK/src/main/java/com/lansosdk/network/: LSOHardWareAuth.java
app/: build.gradle
app/release/: output.json
app/src/main/: AndroidManifest.xml
app/src/main/assets/: AllGzj_android.key  com.lansong.sdk_android_end20221101.key
app/src/main/java/com/lansong/sdk/: CrashHandler.java  LSOApplication.java  (+2 more)
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
